--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,24 @@
 Package: svKomodo
 Type: Package
-Version: 0.9-63
-Date: 2015-02-05
-Title: SciViews GUI API - Functions to interface with Komodo Edit/IDE
-Author: Philippe Grosjean [aut, cre]
+Version: 1.0.0
+Date: 2022-05-07
+Title: 'SciViews' - Functions to Interface with Komodo IDE
+Description: R-side code to implement an R editor and IDE in Komodo IDE
+  (https://www.activestate.com/products/komodo-ide/) with the SciViews-K
+  extension.
 Authors@R: c(person("Philippe", "Grosjean", role = c("aut", "cre"),
-  email = "phgrosjean@sciviews.org"))
+  email = "phgrosjean@sciviews.org",
+  comment = c(ORCID = "0000-0002-2694-9471")))
 Maintainer: Philippe Grosjean <phgrosjean@sciviews.org>
 Depends: R (>= 2.6.0), svMisc (>= 0.9-68)
 Imports: utils
-Suggests: svHttp, svSocket
-SystemRequirements: Komodo Edit (http://www.openkomodo.com), SciViews-K (http://www.sciviews.org/SciViews-K)
-Description: Functions to manage the GUI client, like Komodo with the SciViews-K extension.
+Suggests: svHttp, svSocket, spelling, covr, knitr, rmarkdown
+SystemRequirements: Komodo Edit (https://www.activestate.com/products/komodo-ide/)
 License: GPL-2
-URL: http://www.sciviews.org/SciViews-R
-BugReports: https://r-forge.r-project.org/tracker/?group_id=194
+URL: https://github.com/SciViews/svKomodo, https://www.sciviews.org/svKomodo/
+BugReports: https://github.com/SciViews/svKomodo/issues
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
+VignetteBuilder: knitr
+Encoding: UTF-8
+Language: en-US
